fix tab z-index

--- a/static/styles/sheet/_actor.scss
+++ b/static/styles/sheet/_actor.scss
@@ -192,6 +192,7 @@ aside#tooltip.actor__info-concept--tooltip {
   .actor-sheet__aside-info,
   .actor-sheet__main-navigation,
   .actor-sheet__main-body,
+  .actor-sheet__navigation-body,
   .actor-sheet__aside-characteristics {
     z-index: 1;
   }
